proxy_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: elastic-app
  name: elastic-app
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: elastic-app
  template: 
    metadata: 
      labels: 
        app: elastic-app
    spec: 
      containers: 
        - name: toolbox
          image: sravangcpdocker/login:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          command: ["/cloud_sql_proxy", "-instances=sqlproxy=tcp:3306", "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: secrets-volume
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: secrets-volume
          secret:
            secretName: cloudsql-proxy-credentials
