service.yml
apiVersion: v1
kind: Service
metadata:
  name: elastic-app
spec:
  selector:
    app: elastic-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
