ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  rules: 
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elastic-app
            port:
              number: 8080
